--- a/public/css/style.css
+++ b/public/css/style.css
@@ -133,17 +133,8 @@ margin: 0 0.5rem;
     background-color: #FF7517;
     border-radius: 0.5rem;
 }
-/* 
-.about{
-    padding: 7.5rem 7% 1.4rem;
-    background-image: url(../img/bg-5.jpeg);
-    background-repeat: no-repeat;
-    background-size: 1537px 740px;
-    background-size: cover;
-    background-position: center;
-    position: relative;
 
-} */
+
 
 .about {
     position: relative;
@@ -167,8 +158,6 @@ margin: 0 0.5rem;
     background-size: cover;
     background-position: center;
 }
-
-
 
 .about h2{
     text-align: center;
@@ -355,46 +344,12 @@ margin: 0 0.5rem;
     /* responsive info */
 
     footer {
+        text-align: center;
         background-color: #000000;
         color: #fff;
         padding: 1.5rem 5% 1.5rem;
     }
-    .footer .container {
-        display: flex;
-    }
-    .footer .container .col-1{
-        flex: 1 1 25rem;
-        font-weight: 200;
-        padding: 0.5rem;
-    }
-    .footer .container .col-2{
-        flex: 1 1 35rem;
-    }
-    .footer .container .row {
-        display: flex;
-    }
-    .footer .container .row .colm-1 {
-        flex: 1 1 0.5rem;
-    }
-    .footer .container .row .colm-2 {
-        flex: 1 1 20rem;
-    }
-    .footer .container .row .colm-1 p{
-        color: #fff;
-        font-size: 0.1px;
-        /* padding: 1rem;   */
-    }
-    .footer .container .row .colm-1 img{
-        height: 1.5rem;
-        border-radius: 1rem;
-    }
-    .footer .container .row .colm-2 p{
-        color: #fff;
-        font-size: 15px;
-        padding-bottom: 4px;  
-        /* margin-bottom: 8rem; */
-    }
-
+    
 
 /* media Queris */
 /* Laptop */
